# practice-rust

./: Cargo.toml
src/: main.rs
