[package]
name = "practice-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.7"
tokio = { version = "1.26.0", features = ["net", "sync", "macros", "rt-multi-thread", "time", "io-util"] }
